# config/userSwagger.json
@@ -67,7 +67,6 @@
         "responses": {}
       }
     },
-
     "/users/login": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -112,7 +111,6 @@
         "responses": {}
       }
     },
-
     "/users/updateProfile": {
       "patch": {
         "x-swagger-router-controller": "middleware-name1",
@@ -145,7 +143,6 @@
         "responses": {}
       }
     },
-
     "/users/logout": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -161,7 +158,6 @@
         "responses": {}
       }
     },
-
     "/users/changePassword": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -194,7 +190,6 @@
         "responses": {}
       }
     },
-
     "/users/forgotPassword": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -214,7 +209,6 @@
         "responses": {}
       }
     },
-
     "/users/otpSend": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -234,7 +228,6 @@
         "responses": {}
       }
     },
-
     "/users/forgetPasswordOTPVerify": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -263,32 +256,32 @@
       }
     },
     "/users/setNewPassword": {
-            "post": {
-                "x-swagger-router-controller": "middleware-name1",
-                "operationId": "users-setNewPassword-post",
-                "tags": ["Application User"],
-                "description": "",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "formData",
-                        "description": "Enter the email",
-                        "required": true,
-                        "type": "string",
-                        "value": ""
-                    },
-                    {
-                        "name": "newPassword",
-                        "in": "formData",
-                        "description": "Enter newPassword ",
-                        "required": true,
-                        "type": "string",
-                        "value": ""
-                    }
-                ],
-                "responses": {}
-            }
-        },
+      "post": {
+        "x-swagger-router-controller": "middleware-name1",
+        "operationId": "users-setNewPassword-post",
+        "tags": ["Application User"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "formData",
+            "description": "Enter the email",
+            "required": true,
+            "type": "string",
+            "value": ""
+          },
+          {
+            "name": "newPassword",
+            "in": "formData",
+            "description": "Enter newPassword ",
+            "required": true,
+            "type": "string",
+            "value": ""
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/users/otpVerify": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -313,7 +306,6 @@
         "responses": {}
       }
     },
-
     "/users/resendOtp": {
       "post": {
         "x-swagger-router-controller": "middleware-name1",
@@ -328,6 +320,33 @@
             "required": false,
             "type": "string",
             "value": "test@gmail.com"
+          }
+        ],
+        "responses": {}
+      }
+    },
+
+    "/users/uploadAndGrade": {
+      "post": {
+        "x-swagger-router-controller": "middleware-name1",
+        "operationId": "users-uploadAndGrade-post",
+        "tags": ["Application User Card Grading"],
+        "description": "",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "card",
+            "in": "formData",
+            "description": "card to upload",
+            "required": false,
+            "type": "file",
+            "format": "binary",
+            "maxLength": 5242880,
+            "allowedMimeTypes": ["image/jpeg", "image/png"]
           }
         ],
         "responses": {}
